WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113664
NetworkProcess crashes in WebCoreResourceHandleAsOperationQueueDelegate callbacks
https://bugs.webkit.org/show_bug.cgi?id=113664
Summary
NetworkProcess crashes in WebCoreResourceHandleAsOperationQueueDelegate callb...
Brady Eidson
Reported
2013-03-31 13:01:03 PDT
NetworkProcess crashes in WebCoreResourceHandleAsOperationQueueDelegate callbacks In the "two part" callbacks that do a dispatch_async followed by a dispatch_semaphore_wait the delegate might have been released and destroyed by the time the semaphore returns. This is bad, and can be fixed with a RetainPtr<> protector. In radar as <
rdar://problem/13541868
>
Attachments
Patch v1
(3.44 KB, patch)
2013-03-31 13:04 PDT
,
Brady Eidson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2013-03-31 13:04:07 PDT
Created
attachment 195904
[details]
Patch v1
Brady Eidson
Comment 2
2013-03-31 13:12:21 PDT
http://trac.webkit.org/changeset/147287
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug